@@ -1,3 +1,7 @@
+* Fri Mar 08 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.1.0
+- Update the upper bound of stdlib to < 6.0.0
+- Update a URL in the README.md
+
 * Fri Dec 21 2018 Michael Morrone <michael.morrone@onyxpoint.com> - 0.1.0
 - Initial commit.
 - Install HIRS Provisioner and check-in with Attestation Certificate Authority.
